Added link to online version

--- a/ezconf2016-ezplatform-views/index.html
+++ b/ezconf2016-ezplatform-views/index.html
@@ -55,10 +55,9 @@
             <ul class="ez-slide-meta">
                 <li>
                     This presentation is online:
-                    <a href="http://j.mp/extending-platformui-2016" style="white-space:nowrap">http://j.mp/extending-platformui-2016</a>
-                </li>
-                <li>
-                    <a href="https://github.com/dpobel/PlatformUIExtensionSkeletonBundle">PlatformUIExtensionSkeletonBundle</a> is available on Github</a>
+                    <a href="https://bdunogier.github.io/talks/ezconf2016-ezplatform-views" style="white-space:nowrap">
+                        bdunogier.github.io/talks/ezconf2016-ezplatform-views
+                    </a>
                 </li>
             </ul>
         </section>
