Changed author name. Copy/paste you know.

--- a/ezconf2016-ezplatform-views/index.html
+++ b/ezconf2016-ezplatform-views/index.html
@@ -7,7 +7,7 @@
     <title>The eZ Platform View layer &ndash; eZ Conference 2016</title>
 
     <meta name="description" content="Extending and Customizing the eZ Platform User Interface">
-    <meta name="author" content="Damien Pobel">
+    <meta name="author" content="Bertrand Dunogier">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
